Add logout button & fix crash caused by spamming between fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="meeting_heading">%s REQUESTS</string>
     <string name="show_route">Show route</string>
     <string name="send_request">Send request</string>
+    <string name="log_out">Log out</string>
 
 </resources>
