--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="meet_a_friend">Requests</string>
+    <string name="new_request">New Request</string>
 
     <!-- Titles for meeting request recycler view -->
     <string name="meeting_active">Active meeting with %s</string>
@@ -43,7 +44,6 @@
 
 
     // Friends
-    <string name="accept">Accept</string>
     <string name="deny">Deny</string>
 
 </resources>
