--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,8 @@
     <string name="accept">Accept</string>
     <string name="reject">Reject</string>
     <string name="cancel">Cancel</string>
-
+    <string name="outgoing">SENT</string>
+    <string name="incoming">INCOMING</string>
 
     // Friends
     <string name="deny">Deny</string>
