calculate entry spacing based on screen height, start entry animations, adjust post method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="qr_scan">Scan QR code</string>
     <string name="qr_code_imgview">Your QR code</string>
 
+    <string name="error_server_connection">Failed to connect</string>
+
 </resources>
