--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="qr_go_back">Go Back</string>
     <string name="qr_continue">Continue</string>
     <string name="qr_friends_with">You are now friends with</string>
+    <string name="qr_valid">This QR code is valid for adding one friend</string>
 
     <string name="error_server_connection">Failed to connect</string>
 
