add sent friend req to friend list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
 
     // Friends
     <string name="deny">Deny</string>
+    <string name="friend_req_sent">You sent a friend request</string>
 
     <!-- QR -->
     <string name="qr_scan">Scan QR code</string>
